Change Index & Menu

--- a/src/WorldTravel.Web/Pages/Admin/Shared/_PartialHeader.cshtml
+++ b/src/WorldTravel.Web/Pages/Admin/Shared/_PartialHeader.cshtml
@@ -59,8 +59,8 @@
 
                     <div class="dropdown-menu dropdown-menu-right">
                         <a href="/Admin/Account/Manage" class="dropdown-item"><i class="icon-user-plus"></i>@L["Profile"]</a>
-                        @*@await Component.InvokeAsync(typeof(LanguageSwitchViewComponent))*@
-@*                        <div class="dropdown-divider"></div>
+@*                        @await Component.InvokeAsync(typeof(Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.Toolbar.LanguageSwitch.LanguageSwitchViewComponent))
+*@@*                        <div class="dropdown-divider"></div>
                         <a href="/Home" class="dropdown-item"><i class="icon-user-plus"></i>@L["UserPage"]</a>*@
                         @*@await Component.InvokeAsync(typeof(LanguageSwitchViewComponent))*@
                         <div class="dropdown-divider"></div>
