--- a/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>@L["ProjectName"]</title>
-    <meta name="description" content="description">
+    @if (ViewBag.Description != null)
+    {
+        <meta name="description" content="@ViewBag.Description" />
+    }
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="shortcut icon" href="/web/images/home-favicon.png" />
@@ -44,12 +47,16 @@
     <link rel="stylesheet" href="/web/css/style.css">
     <link rel="stylesheet" href="/web/css/responsive.css">
     <link href="/web/css/custom.css" rel="stylesheet" />
+    @await Component.InvokeAsync(typeof(WidgetStylesViewComponent))
     @await RenderSectionAsync("styles", false)
+    @await Component.InvokeLayoutHookAsync(LayoutHooks.Head.Last, StandardLayouts.Empty)
 </head>
-<body class="template-index belle home5-cosmetic">
+<body class="template-index belle">
     <div id="pre-loader">
         <img src="/web/images/loader.gif" alt="Loading..." />
     </div>
+    @await Component.InvokeLayoutHookAsync(LayoutHooks.Body.First, StandardLayouts.Empty)
+
     <div class="pageWrapper">
         <!--Search Form Drawer-->
         <div class="search">
@@ -62,6 +69,53 @@
             </div>
         </div>
         <!--End Search Form Drawer-->
+
+        <div class="top-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+                        @*   <div class="currency-picker">
+                        <span class="selected-currency">USD</span>
+                        <ul id="currencies">
+                        <li data-currency="INR" class="">INR</li>
+                        <li data-currency="GBP" class="">GBP</li>
+                        <li data-currency="CAD" class="">CAD</li>
+                        <li data-currency="USD" class="selected">USD</li>
+                        <li data-currency="AUD" class="">AUD</li>
+                        <li data-currency="EUR" class="">EUR</li>
+                        <li data-currency="JPY" class="">JPY</li>
+                        </ul>
+                        </div>*@
+                        <div class="language-dropdown">
+                            <span class="language-dd">
+                                <img width="23" class="selectedLanguageImage" src="/global_assets/images/lang/tr.png" />
+                                <span class="selectedLanguageName">@L["Turkish"]</span>
+                            </span>
+                            <ul id="language" style="width:120px;">
+                                <li class="select-language">
+                                    <a style="color:black;text-decoration:none;" href="#">
+                                        <img width="23" class="optionLanguageImage" src="/global_assets/images/lang/en.png" />
+                                        <span class="optionLanguageName">@L["English"]</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <p class="phone-no"><i class="anm anm-phone-s"></i> +90 (546) 767 9477</p>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+                        <div class="text-center"><p class="top-header_middle-text"> @L["WorldwideTravel"]</p></div>
+                    </div>
+                    <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+                        <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
+                        <ul class="customer-links list-inline">
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="register.html">Create Account</a></li>
+                            <li><a href="wishlist.html">Wishlist</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--Header-->
         <!--Web & Mobile Menu-->
         <partial name="_Menu" />
@@ -193,7 +247,6 @@
             </div>
         </div>
         <!--End Quick View popup-->
-
         <abp-script-bundle name="@BasicThemeBundles.Scripts.Global" />
         <script src="~/Abp/ApplicationConfigurationScript"></script>
         <script src="~/Abp/ServiceProxyScript"></script>
@@ -217,17 +270,44 @@
         <script src="~/global_assets/js/plugins/forms/selects/bootstrap_multiselect.js"></script>
         <script src="~/global_assets/js/plugins/forms/inputs/formatter.min.js"></script>
         <script src="~/libs/toastr/toastr.min.js"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
         <script src="~/web/js/main.js"></script>
         <script src="~/web/js/custom.js"></script>
         <!--For Newsletter Popup-->
         <!-- Photoswipe Gallery -->
         <script src="~/web/js/vendor/photoswipe.min.js"></script>
         <script src="~/web/js/vendor/photoswipe-ui-default.min.js"></script>
+
         <script>
             jQuery(document).ready(function () {
+
+                //#region Localization
+                var languageCookie = localStorage.getItem('$language');
+                if (languageCookie == 'tr' || languageCookie == null) {
+                    $('.selectedLanguageImage').attr('src', '/global_assets/images/lang/tr.png');
+                    $('.selectedLanguageName').html('@L["Turkish"]');
+                    $('.optionLanguageImage').attr('src', '/global_assets/images/lang/en.png');
+                    $('.optionLanguageName').html('@L["English"]');
+                }
+                else {
+                    $('.selectedLanguageImage').attr('src', '/global_assets/images/lang/en.png');
+                    $('.selectedLanguageName').html('@L["English"]');
+                    $('.optionLanguageImage').attr('src', '/global_assets/images/lang/tr.png');
+                    $('.optionLanguageName').html('@L["Turkish"]');
+                }
+
+                $('.select-language').click(function (e) {
+                    var languageCookie = localStorage.getItem('$language');
+                    if (languageCookie == 'en') {
+                        localStorage.setItem('$language', 'tr');
+                        window.location.href = "/Abp/Languages/Switch?culture=tr&uiCulture=tr&returnUrl=%2FHome";
+                    }
+                    else {
+                        localStorage.setItem('$language', 'en');
+                        window.location.href = "/Abp/Languages/Switch?culture=en&uiCulture=en&returnUrl=%2FHome";
+                    }
+                });
+                //#endregion
+
                 jQuery('.closepopup').on('click', function () {
                     jQuery('#popup-container').fadeOut();
                     jQuery('#modalOverly').fadeOut();
