--- a/src/WorldTravel.Web/Pages/Account/Login.cshtml
+++ b/src/WorldTravel.Web/Pages/Account/Login.cshtml
@@ -52,7 +52,7 @@
 @section scripts {
     <script>
         $(document).ready(function () {
-            $('body').addClass('home5-cosmetic');
+            $('body').addClass('home9-parallax');
             $('.header-wrap').removeClass('classicHeader');
         });
     </script>
