--- a/src/WorldTravel.Web/Pages/Account/Manage.cshtml
+++ b/src/WorldTravel.Web/Pages/Account/Manage.cshtml
@@ -91,7 +91,7 @@
 @section scripts {
     <script>
         $(document).ready(function () {
-            $('body').addClass('home5-cosmetic');
+            $('body').addClass('home9-parallax');
             $('.header-wrap').removeClass('classicHeader');
             $('#UserManageInputModel_BirthDate').attr('type', 'date');
 
