--- a/src/WorldTravel.Web/Pages/Error/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Error/Index.cshtml
@@ -21,3 +21,11 @@
         </div>
     </div>
 </div>
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            $('body').addClass('home9-parallax');
+            $('.header-wrap').removeClass('classicHeader');
+        });
+    </script>
+}
