--- a/src/WorldTravel.Web/Pages/Message/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Message/Index.cshtml
@@ -189,7 +189,7 @@
 @section scripts {
     <script>
         $(document).ready(function () {
-            $('body').addClass('home5-cosmetic');
+            $('body').addClass('home9-parallax');
             $('.header-wrap').removeClass('classicHeader');
             $('#footer').addClass('mt-00');
             $(".chat-list a").click(function () {
