--- a/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     }
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/web/images/home-favicon.png" />
+    <link rel="shortcut icon" href="/web/images/world-logo.png" />
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="/web/css/plugins.css">
     <!-- Bootstap CSS -->
@@ -46,6 +46,8 @@
     *@
     <link rel="stylesheet" href="/web/css/style.css">
     <link rel="stylesheet" href="/web/css/responsive.css">
+
+    <link rel="stylesheet" href="/web/ext/chatbot.css">
     <link href="/web/css/custom.css" rel="stylesheet" />
     @await Component.InvokeAsync(typeof(WidgetStylesViewComponent))
     @await RenderSectionAsync("styles", false)
@@ -106,12 +108,12 @@
                         <div class="text-center"><p class="top-header_middle-text"> @L["WorldwideTravel"]</p></div>
                     </div>
                     <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
-                        <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
+                        @* <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
                         <ul class="customer-links list-inline">
-                            <li><a href="login.html">Login</a></li>
-                            <li><a href="register.html">Create Account</a></li>
-                            <li><a href="wishlist.html">Wishlist</a></li>
-                        </ul>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="register.html">Create Account</a></li>
+                        <li><a href="wishlist.html">Wishlist</a></li>
+                        </ul>*@
                     </div>
                 </div>
             </div>
@@ -120,6 +122,37 @@
         <!--Web & Mobile Menu-->
         <partial name="_Menu" />
         <!--End Menu-->
+
+        <div class="floating-chat">
+            <i class="fa fa-comments" aria-hidden="true"></i>
+            <div class="chat">
+                <div class="header">
+                    <span class="title">
+                        what's on your mind?
+                    </span>
+                    <button>
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+
+                </div>
+                <ul class="messages">
+                    <li class="other">asdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdas</li>
+                    <li class="other">Are we dogs??? 🐶</li>
+                    <li class="self">no... we're human</li>
+                    <li class="other">are you sure???</li>
+                    <li class="self">yes.... -___-</li>
+                    <li class="other">if we're not dogs.... we might be monkeys 🐵</li>
+                    <li class="self">i hate you</li>
+                    <li class="other">don't be so negative! here's a banana 🍌</li>
+                    <li class="self">......... -___-</li>
+                </ul>
+                <div class="footer">
+                    <div class="text-box" contenteditable="true" disabled="true"></div>
+                    <button id="sendMessage">send</button>
+                </div>
+            </div>
+        </div>
+
         <!--Body Content-->
         <div id="page-content">
             @RenderBody()
@@ -271,6 +304,8 @@
         <script src="~/global_assets/js/plugins/forms/inputs/formatter.min.js"></script>
         <script src="~/libs/toastr/toastr.min.js"></script>
         <script src="~/web/js/main.js"></script>
+
+        <script src="~/web/ext/chatbox.js"></script>
         <script src="~/web/js/custom.js"></script>
         <!--For Newsletter Popup-->
         <!-- Photoswipe Gallery -->
