CustomDbContextModelCreateingExtension eklendi. ShareContent ve CountryContent eklendi

--- a/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
@@ -68,8 +68,8 @@
                         </li>
                         @if (CurrentUser.IsAuthenticated)
                         {
-                            <li class="lvl1"><a href="/Message"><i class="fa fa-envelope fa-fw"></i> @L["Message"] (2)</a></li>
-                            <li class="lvl1 parent dropdown">
+@*                            <li class="lvl1"><a href="/Message"><i class="fa fa-envelope fa-fw"></i> @L["Message"] (2)</a></li>
+*@                            <li class="lvl1 parent dropdown">
                                 <a href="#"><i class="fa fa-user fa-fw"></i> @L["Profile"]<i class="anm anm-angle-down-l"></i></a>
                                 <ul class="dropdown">
                                     @* <li class="lvl1">
