--- a/src/WorldTravel.Web/Pages/Admin/Shared/_PartialSidebar.cshtml
+++ b/src/WorldTravel.Web/Pages/Admin/Shared/_PartialSidebar.cshtml
@@ -24,14 +24,12 @@
                     <div class="mr-3">
                         <a href="#"><img src="~/global_assets/images/placeholders/placeholder.jpg" width="38" height="38" class="rounded-circle" alt=""></a>
                     </div>
-
                     <div class="media-body">
                         <div class="media-title font-weight-semibold">@User.Identity.Name</div>
                         <div class="font-size-xs opacity-50">
                             <a href="/Account/Logout"><i class="icon-switch2 font-size-sm"></i> &nbsp;@L["Logout"]</a>
                         </div>
                     </div>
-
                     <div class="ml-3 align-self-center">
                         <a href="/Account/Manage" class="text-white"><i class="icon-cog3"></i></a>
                     </div>
@@ -42,23 +40,18 @@
             <ul class="nav nav-sidebar" data-nav-type="accordion">
                 <li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">@L["ProjectName"]</div> <i class="icon-menu" title="Main"></i></li>
                 <li class="nav-item"><a href="/Admin" class="nav-link"><i class="icon-home"></i> <span>@L["AdminPage"]</span></a></li>
-                @*   @if (await AuthorizationService.IsGrantedAsync(OrganizasyonPermissions.Users.Default))
-                {*@
-                <li class="nav-item"><a href="/Admin/Identity/Users" class="nav-link"><i class="icon-user"></i> <span>@L["UserManagement"]</span></a></li>
-                @* }
-                @if (await AuthorizationService.IsGrantedAsync(OrganizasyonPermissions.Roles.Default))
-                {*@
-                <li class="nav-item"><a href="/Admin/Identity/Roles" class="nav-link"><i class="icon-wall"></i> <span>@L["RoleManagement"]</span></a></li>
-                @* }
-                @if (await AuthorizationService.IsGrantedAsync(OrganizasyonPermissions.Companies.Default))
-                {*@
-                <li class="nav-item">
-                    <a href="/Admin/Company/Index" class="nav-link">
-                        <i class="icon-list-unordered"></i> <span>@L["CompanyManagement"]</span>
-                    </a>
-                </li>
-                @* }*@
-
+                @if (await AuthorizationService.IsGrantedAsync(WorldTravelPermissions.User.Default))
+                {
+                    <li class="nav-item"><a href="/Admin/Identity/Users" class="nav-link"><i class="icon-user"></i> <span>@L["UserManagement"]</span></a></li>
+                }
+                @if (await AuthorizationService.IsGrantedAsync(WorldTravelPermissions.Role.Default))
+                {
+                    <li class="nav-item"><a href="/Admin/Identity/Roles" class="nav-link"><i class="icon-wall"></i> <span>@L["RoleManagement"]</span></a></li>
+                }
+                @if (await AuthorizationService.IsGrantedAsync(WorldTravelPermissions.Form.Default))
+                {
+                    <li class="nav-item"> <a href="/Admin/Form/Index" class="nav-link"> <i class="icon-list-unordered"></i> <span>@L["FormManagement"]</span></a></li>
+                }
             </ul>
         </div>
     </div>
