--- a/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
@@ -119,48 +119,17 @@
             </div>
         </div>
         <!--Header-->
-        <!--Web & Mobile Menu-->
+
         <partial name="_Menu" />
-        <!--End Menu-->
 
-        <div class="floating-chat">
-            <i class="fa fa-comments" aria-hidden="true"></i>
-            <div class="chat">
-                <div class="header">
-                    <span class="title">
-                        what's on your mind?
-                    </span>
-                    <button>
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-
-                </div>
-                <ul class="messages">
-                    <li class="other">asdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdas</li>
-                    <li class="other">Are we dogs??? 🐶</li>
-                    <li class="self">no... we're human</li>
-                    <li class="other">are you sure???</li>
-                    <li class="self">yes.... -___-</li>
-                    <li class="other">if we're not dogs.... we might be monkeys 🐵</li>
-                    <li class="self">i hate you</li>
-                    <li class="other">don't be so negative! here's a banana 🍌</li>
-                    <li class="self">......... -___-</li>
-                </ul>
-                <div class="footer">
-                    <div class="text-box" contenteditable="true" disabled="true"></div>
-                    <button id="sendMessage">send</button>
-                </div>
-            </div>
-        </div>
-
-        <!--Body Content-->
         <div id="page-content">
             @RenderBody()
         </div>
-        <!--End Body Content-->
-        <!--Footer-->
+
+        <partial name="_ChatBot" />
+
         <partial name="_Footer" />
-        <!--End Footer-->
+
         <!--Scoll Top-->
         <span id="site-scroll"><i class="icon anm anm-angle-up-r"></i></span>
         <!--End Scoll Top-->
