--- a/src/WorldTravel.Web/wwwroot/web/ext/chatbot.css
+++ b/src/WorldTravel.Web/wwwroot/web/ext/chatbot.css
@@ -1,14 +1,14 @@
-﻿@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
-
-* {
+﻿/*@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
+*/
+/** {
     box-sizing: border-box;
-}
+}*/
 
-body {
+/*body {
     background: skyblue;
     font: 12px/16px "Noto Sans", sans-serif;
 }
-
+*/
 .floating-chat {
     cursor: pointer;
     display: flex;
