--- a/src/WorldTravel.Web/Pages/Error/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Error/Index.cshtml
@@ -5,14 +5,14 @@
 @inject IStringLocalizer<WorldTravelResource> L
 @model WorldTravel.Web.Pages.Error.IndexModel
 @{
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "~/Pages/Shared/_Layout2.cshtml";
 }
 
 <div class="error-page">
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="empty-page-content text-center" style="padding:240px 0;">
+                <div class="empty-page-content text-center" style="padding:200px 0;">
                     <h1>@Model.ErrorMessage</h1>
                     <br />
                     <p><a href="/Home" class="btn btn--has-icon-after">@L["ReturnHomePage"]</a></p>
