--- a/src/WorldTravel.Web/Pages/Shared/_Layout2.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout2.cshtml
@@ -121,7 +121,7 @@
         </div>
         <!--Header-->
 
-        <partial name="_Menu" />
+        <partial name="_Menu2" />
 
         <div id="page-content">
             @RenderBody()
