--- a/src/WorldTravel.Web/Pages/Admin/Shared/_PartialHeader.cshtml
+++ b/src/WorldTravel.Web/Pages/Admin/Shared/_PartialHeader.cshtml
@@ -58,13 +58,13 @@
                     </a>
 
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a href="/Admin/Account/Manage" class="dropdown-item"><i class="icon-user-plus"></i>@L["Profile"]</a>
-@*                        @await Component.InvokeAsync(typeof(Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.Toolbar.LanguageSwitch.LanguageSwitchViewComponent))
-*@@*                        <div class="dropdown-divider"></div>
-                        <a href="/Home" class="dropdown-item"><i class="icon-user-plus"></i>@L["UserPage"]</a>*@
+                        <a href="/Admin/Account/Manage" class="dropdown-item"><i class="icon-user"></i>@L["ProfileS"]</a>
+                        @*@await Component.InvokeAsync(typeof(Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.Toolbar.LanguageSwitch.LanguageSwitchViewComponent))*@
                         @*@await Component.InvokeAsync(typeof(LanguageSwitchViewComponent))*@
                         <div class="dropdown-divider"></div>
-                        <a href="/Account/Logout" class="dropdown-item"><i class="icon-switch2"></i>@L["Logout"]</a>
+                        <a href="/Home" target="_blank" class="dropdown-item"><i class="icon-reply"></i>@L["ReturnUserPage"]</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="/Admin/Account/Logout" class="dropdown-item"><i class="icon-switch2"></i>@L["Logout"]</a>
                     </div>
                 </li>
             }
